@@ -15,6 +15,8 @@ Date: ???
     - Disabled recipes Silicon > Glass and Silver ore > Silver plate
     - Removed recipe Carbon > Carbon Dioxide
     - Moved garden duplication recipes to Alien farming
+    - Moved Small storage tanks to Fluid control
+    - Removed empty technologies
   Bugfixes:
     - Fixed crash in tutorial when SCT was not enabled
     - Cellulose Pulp was not usable as intermediate when hand crafting
